Add tag id field
